First full fleshed out version.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "vector": "cpp",
         "algorithm": "cpp",
         "*.ipp": "cpp",
-        "__assert": "cpp"
+        "__assert": "cpp",
+        "filesystem": "cpp"
     }
 }
