--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -16,8 +16,8 @@ jobs:
     name: Build extension binaries
     uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v0.10.1
     with:
-      duckdb_version: v0.10.1
-      extension_name: quack
+      duckdb_version: v0.10.3
+      extension_name: ros
 
   duckdb-stable-deploy:
     name: Deploy extension binaries
@@ -25,6 +25,6 @@ jobs:
     uses: ./.github/workflows/_extension_deploy.yml
     secrets: inherit
     with:
-      duckdb_version: v0.10.1
-      extension_name: quack
+      duckdb_version: v0.10.3
+      extension_name: ros
       deploy_latest: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
