--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,5 +102,6 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "cfenv": "cpp"
-    }
+    },
+    "ansible.python.interpreterPath": "/usr/bin/python3"
 }
